--- a/web/app/themes/flexor/package.json
+++ b/web/app/themes/flexor/package.json
@@ -26,7 +26,9 @@
     "bud-wp-editor-query": "^0.0.4"
   },
   "dependencies": {
+    "@10up/block-components": "^1.18.2",
     "@popperjs/core": "^2.11.8",
+    "@wordpress/components": "^28.0.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
