CSS Classes AOS Animation
This feature is fully optimize for user that they can add animation using AOS by simply add CSS Classnames. Additional commits are below listed:
- Update README.md for better setup
- Update README.md for Gutenberg tips to add AOS animation
- Simplify SwiperJS Animation to add modules using Pagination and other necessary modules to work.
- Added new composer scripts to easy run the command from root folder.
- Added default AOS animation on each block patterns.
- Added Styles config in bud.config.js for typography elements and also added layout content size and wide size.

--- a/composer.json
+++ b/composer.json
@@ -79,6 +79,9 @@
     "wordpress-install-dir": "web/wp"
   },
   "scripts": {
+    "post-install-cmd":[
+      "@php -r \"chdir('web/app/themes/flexor') && passthru('composer install && yarn') && exit(0) || exit(1);\""
+    ],
     "post-root-package-install": [
       "php -r \"copy('.env.example', '.env');\"",
       "composer run remove-old-wp-themes"
@@ -97,6 +100,15 @@
       "rm -rf web/wp/wp-content/themes/twentyseventeen",
       "rm -rf web/wp/wp-content/themes/twentynineteen",
       "rm -rf web/wp/wp-content/themes/twentytwenty"
+    ],
+    "build-theme":[
+      "@php -r \"chdir('web/app/themes/flexor') && passthru('yarn build --clean') && exit(0) || exit(1);\""
+    ],
+    "dev-theme":[
+      "@php -r \"chdir('web/app/themes/flexor') && passthru('yarn dev') && exit(0) || exit(1);\""
+    ],
+    "vendor:publish":[
+      "@php -r \"chdir('web/app/themes/flexor') && passthru('wp acorn vendor:publish') && exit(0) || exit(1);\""
     ],
     "test": [
       "phpcs"
