Icon Block Component Feature
- Added Bootstrap Icons into the Sage Package
- Added Bootstrap SVG function to compile it into an array of IconSets
- Added new package called `svgToJson` to use the command on finding input dir and output it into JS file for easy configuration into `registerIcons` function.
- Added Screenshots and its description for it to show on Themes Page.
- Replace Block Patterns Icon Block component from plugin into my own block component.
- Re-register yarn.lock to clean up the mess

--- a/composer.json
+++ b/composer.json
@@ -79,6 +79,9 @@
     "wordpress-install-dir": "web/wp"
   },
   "scripts": {
+    "pre-install-cmd": [
+      "Composer\\Config::disableProcessTimeout"
+    ],
     "post-install-cmd":[
       "@php -r \"chdir('web/app/themes/flexor') && passthru('composer install && yarn') && exit(0) || exit(1);\""
     ],
