--- a/web/app/themes/flexor/package.json
+++ b/web/app/themes/flexor/package.json
@@ -16,14 +16,16 @@
     "translate:update": "for file in ./resources/lang/*.po; do wp i18n update-po ./resources/lang/sage.pot $file; done",
     "translate:compile": "npm run translate:mo && npm run translate:js",
     "translate:js": "wp i18n make-json ./resources/lang --pretty-print",
-    "translate:mo": "wp i18n make-mo ./resources/lang ./resources/lang"
+    "translate:mo": "wp i18n make-mo ./resources/lang ./resources/lang",
+    "svgtojson": "svgToJson"
   },
   "devDependencies": {
     "@roots/bud": "6.20.0",
     "@roots/bud-sass": "^6.21.0",
     "@roots/bud-tailwindcss": "6.20.0",
     "@roots/sage": "6.20.0",
-    "bud-wp-editor-query": "^0.0.4"
+    "bud-wp-editor-query": "^0.0.4",
+    "svg-to-json": "^0.9.7"
   },
   "dependencies": {
     "@10up/block-components": "^1.18.2",
