Add new Readme doc
- Added new instructions for readme documentation.
- Added new command line for composer to upgrade yarn when other computer system has some conflict when run `dev-theme`

--- a/web/app/themes/flexor/package.json
+++ b/web/app/themes/flexor/package.json
@@ -9,7 +9,7 @@
   },
   "type": "module",
   "scripts": {
-    "dev": "bud dev",
+    "dev": "bud dev --debug",
     "build": "bud build",
     "translate": "npm run translate:pot && npm run translate:update",
     "translate:pot": "wp i18n make-pot . ./resources/lang/sage.pot --include=\"theme.json,patterns,app,resources\"",
