--- a/composer.json
+++ b/composer.json
@@ -104,6 +104,10 @@
       "rm -rf web/wp/wp-content/themes/twentynineteen",
       "rm -rf web/wp/wp-content/themes/twentytwenty"
     ],
+    "upgrade-theme": [
+      "Composer\\Config::disableProcessTimeout",
+      "@php -r \"chdir('web/app/themes/flexor') && passthru('yarn upgrade') && exit(0) || exit(1);\""
+    ],
     "build-theme":[
       "@php -r \"chdir('web/app/themes/flexor') && passthru('yarn build --clean') && exit(0) || exit(1);\""
     ],
