--- a/web/app/themes/flexor/package.json
+++ b/web/app/themes/flexor/package.json
@@ -9,8 +9,9 @@
   },
   "type": "module",
   "scripts": {
-    "dev": "bud dev --debug",
+    "dev": "bud dev",
     "build": "bud build",
+    "debug": "bud dev --debug",
     "translate": "npm run translate:pot && npm run translate:update",
     "translate:pot": "wp i18n make-pot . ./resources/lang/sage.pot --include=\"theme.json,patterns,app,resources\"",
     "translate:update": "for file in ./resources/lang/*.po; do wp i18n update-po ./resources/lang/sage.pot $file; done",
