--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,9 @@
     "roots/wordpress": "6.5.4",
     "roots/wp-config": "1.0.0",
     "roots/wp-password-bcrypt": "1.1.0",
-    "wpackagist-theme/twentytwentyfour": "^1.0"
+    "wpackagist-theme/twentytwentyfour": "^1.0",
+    "wpackagist-plugin/carousel-block": "^1.0",
+    "wpackagist-plugin/riovizual": "^2.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7.1",
