--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,10 @@
         "wpackagist-plugin/*",
         "wpackagist-theme/*"
       ]
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/idbsupport3F/Custom-Controls.git"
     }
   ],
   "require": {
@@ -50,7 +54,8 @@
     "roots/wp-password-bcrypt": "1.1.0",
     "wpackagist-theme/twentytwentyfour": "^1.0",
     "wpackagist-plugin/carousel-block": "^1.0",
-    "wpackagist-plugin/riovizual": "^2.0"
+    "wpackagist-plugin/riovizual": "^2.0",
+    "idbsupport3f/custom-controls": "1.2.1"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7.1",
@@ -82,13 +87,19 @@
   },
   "scripts": {
     "pre-install-cmd": [
-      "Composer\\Config::disableProcessTimeout"
+      "Composer\\Config::disableProcessTimeout",
+      "export $(grep -v '^#' .env | xargs) && cd web/app/themes/flexor && [ $WP_ENV == \"development\" ] && yarn install --production=false || yarn install --production=true"
     ],
     "post-install-cmd":[
-      "cd web/app/themes/flexor && composer install && yarn"
+      "unset $(grep -v '^#' .env | sed -E 's/(.*)=.*/\\1/' | xargs)",
+      "cd web/app/themes/flexor && composer install"
     ],
     "post-root-package-install": [
       "php -r \"copy('.env.example', '.env');\""
+    ],
+    "install-production": [
+      "Composer\\Config::disableProcessTimeout",
+      "cd web/app/themes/flexor && composer install && yarn install"
     ],
     "upgrade-theme": [
       "Composer\\Config::disableProcessTimeout",
