Fix some bugs & added new controller.
- Upgrade package muplugin for `idbsupport3f/custom-controls` to `1.2.4` on more stable plugin.
- Adjust `bud.config.js` to have standardize on the targetted domain.
- Move `require_once` from `function.php` into `app/setup.php` on making it `after_setup_theme` and also make them `include_once`.
- Added new customizer for `site_logo_height` to test on Slider Controller.
- Remove `max-height` on header logo image in `base.scss`.
- Remove min-height on `faq.blade.php`.
- Added `site_logo` composer to always return array.
- Adjust `footer.blade.php` , `header.blade.php` & `peperiksaan-footer.blade.php` that fetch composer's object on `site_logo`.

--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,7 @@
     "wpackagist-theme/twentytwentyfour": "^1.0",
     "wpackagist-plugin/carousel-block": "^1.0",
     "wpackagist-plugin/riovizual": "^2.0",
-    "idbsupport3f/custom-controls": "1.2.1"
+    "idbsupport3f/custom-controls": "^1.2"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7.1",
@@ -89,13 +89,14 @@
     "pre-install-cmd": [
       "Composer\\Config::disableProcessTimeout"
     ],
-    "post-install-cmd":[
-      "cd ./web/app/themes/flexor && composer install && yarn install"
-    ],
-    "post-root-package-install": [
-      "php -r \"copy('.env.example', '.env');\""
+    "deploy": [
+      "Composer\\Config::disableProcessTimeout",
+      "composer install",
+      "cd ./web/app/themes/flexor && yarn build && composer install --no-dev --optimize-autoloader",
+      "ce ./web/app/themes/flexor && wp acorn optimize"
     ],
     "build-theme":[
+      "Composer\\Config::disableProcessTimeout",
       "(cd ./web/app/themes/flexor && yarn build) || (cd ./web/app/themes/flexor && NODE_ENV=development && yarn install && yarn build)"
     ],
     "dev-theme":[
